ugly not elegant fix for heigth on mobile

--- a/src/components/NoAlgoCard/noAlgoCard.css
+++ b/src/components/NoAlgoCard/noAlgoCard.css
@@ -6,17 +6,17 @@
   display: flex;
   flex-direction: column;
   animation: appear-up 1.2s;
-  border: rgb(200, 200, 250) 1px solid;
+  border: rgb(230, 230, 250) 1px solid;
   -webkit-box-shadow: 0px 5px 15px  rgba(20,20,20,.85);
   -moz-box-shadow: 0px 5px 15px rgba(20,20,20,.85);
   box-shadow: 0px 5px 15px rgba(20,20,20,.85);
 }
 .no-algo-img{
-  margin: 2.5rem auto;
+  margin: 2rem auto;
   width: 5rem;
   height: 5rem;
   position: relative;
-  border: rgb(200, 200, 250) 1px solid;
+  border: rgb(230, 230, 250) 1px solid;
   border-radius: 50%;
   -webkit-box-shadow: 0px 0px 8px 3px rgba(255,255,255,0.39);
   -moz-box-shadow: 0px 0px 8px 3px rgba(255,255,255,0.39);
